--- a/backend/package.json
+++ b/backend/package.json
@@ -22,15 +22,21 @@
     "type": "commonjs",
     "description": "",
     "dependencies": {
+        "@prisma/client": "^6.3.0",
+        "bcrypt": "^5.1.1",
         "body-parser": "^1.20.3",
         "cookie-parser": "^1.4.7",
         "cors": "^2.8.5",
         "dotenv": "^16.4.7",
         "dotenv-cli": "^8.0.0",
         "express": "^4.21.2",
+        "google-libphonenumber": "^3.2.40",
         "helmet": "^8.0.0",
         "http-errors": "^2.0.0",
+        "http-status-codes": "^2.3.0",
+        "jsonwebtoken": "^9.0.2",
         "nodemon": "^3.1.9",
+        "prisma": "^6.3.0",
         "ts-node": "^10.9.2",
         "zod": "^3.24.1"
     },
