.env.example is updated

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -7,7 +7,7 @@ BASE_URL="http://localhost"
 DEV_DB_USER=dev-user
 DEV_DB_PASSWORD=dev123
 DEV_DB_NAME=dev-db
-DEV_DB_PORT=5432
+DEV_DB_PORT=5435
 
 # This was inserted by `prisma init`:
 # Environment variables declared in this file are automatically made available to Prisma.
@@ -15,7 +15,7 @@ DEV_DB_PORT=5432
 
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
-DATABASE_URL="postgresql://${DEV_DB_USER}:${DEV_DB_PASSWORD}@localhost:${DEV_DB_USER}:${DEV_DB_PASSWORD}?schema=public"
+DATABASE_URL="postgresql://${DEV_DB_USER}:${DEV_DB_PASSWORD}@localhost:${DEV_DB_PORT}/${DEV_DB_NAME}?schema=public"
 
 # Auth
 SALT_ROUNDS=10
