--- a/backend/package.json
+++ b/backend/package.json
@@ -42,10 +42,12 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.19.0",
+        "@types/bcrypt": "^5.0.2",
         "@types/body-parser": "^1.19.5",
         "@types/cookie-parser": "^1.4.8",
         "@types/cors": "^2.8.17",
         "@types/express": "^5.0.0",
+        "@types/jsonwebtoken": "^9.0.8",
         "@types/node": "^22.12.0",
         "eslint": "^9.19.0",
         "globals": "^15.14.0",
