Environment variables are extened with default login variables

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -20,6 +20,12 @@ DATABASE_URL="postgresql://${DEV_DB_USER}:${DEV_DB_PASSWORD}@localhost:${DEV_DB_
 # Auth
 SALT_ROUNDS=10
 JWT_SECRET="<secret>"
+ADMIN_USERNAME="admin"
+ADMIN_EMAIL="admin@patient.com"
+ADMIN_PASSWORD="admin1234"
+TEST_USERNAME="test-user"
+TEST_USER_EMAIL="test@example.com"
+TEST_USER_PASSWORD="1234"
 
 # Frontend
-FRONTEND_BASE_URL="<ip>"
+FRONTEND_BASE_URL="http://<ip>"
