--- a/backend/package.json
+++ b/backend/package.json
@@ -5,15 +5,17 @@
     "scripts": {
         "nodemon": "nodemon src/app.ts",
         "dev": "DEBUG=backend:* dotenv -e .env nodemon",
-        "prisma:migrate": "dotenv -e .env -- prisma migrate dev",
-        "prisma:push": "dotenv -e .env -- prisma db push",
+        "prisma:migrate-dev": "dotenv -e .env -- prisma migrate dev",
+        "prisma:push-dev": "dotenv -e .env -- prisma db push",
         "prisma:studio": "npx prisma studio",
         "prisma:seed": "tsx prisma/seed.ts",
+        "prisma:migrate-test": "dotenv -e .env.test -- prisma migrate dev",
+        "prisma:push-test": "dotenv -e .env.test -- prisma db push",
         "build": "npx tsc",
         "start": "node dist/app.js",
-        "lint": "eslint src/*.ts",
-        "lint:fix": "eslint --fix src/*.ts",
-        "format": "prettier --write .",
+        "lint": "eslint src/**/*.ts",
+        "lint:fix": "eslint --fix src/**/*.ts",
+        "format": "prettier --write src/**/*.ts",
         "test:watch": "dotenv -e .env.test -- jest --watchAll --detectOpenHandles",
         "test": "dotenv -e .env.test -- jest --detectOpenHandles"
     },
@@ -36,7 +38,6 @@
         "http-errors": "^2.0.0",
         "http-status-codes": "^2.3.0",
         "jsonwebtoken": "^9.0.2",
-        "nodemon": "^3.1.9",
         "prisma": "^6.3.0",
         "zod": "^3.24.1"
     },
@@ -47,11 +48,17 @@
         "@types/cookie-parser": "^1.4.8",
         "@types/cors": "^2.8.17",
         "@types/express": "^5.0.0",
+        "@types/jest": "^29.5.14",
         "@types/jsonwebtoken": "^9.0.8",
         "@types/node": "^22.12.0",
+        "@types/supertest": "^6.0.2",
         "eslint": "^9.19.0",
         "globals": "^15.14.0",
+        "jest": "^29.7.0",
+        "nodemon": "^3.1.9",
         "prettier": "3.4.2",
+        "supertest": "^7.0.0",
+        "ts-jest": "^29.2.5",
         "ts-node": "^10.9.2",
         "tsx": "^4.19.2",
         "typescript": "^5.7.3",
