.gitignore is updated, package-lock.json is removed

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
-# Nest.js
+# Express.js
 backend/node_modules/
 backend/.env
 backend/.env.test
 backend/dist
 backend/build
+backend/package-lock.json
 
 # React Native
 frontend/node_modules/
@@ -11,3 +12,4 @@ frontend/.env
 frontend/android/.gradle/
 frontend/android/app/build/
 frontend/ios/Pods/
+frontend/package-lock.json
