--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,22 @@ frontend/.env
 frontend/android/.gradle/
 frontend/android/app/build/
 frontend/ios/Pods/
+frontend/.expo/
+frontend/dist/
+frontend/web-build/
+frontend/expo-env.d.ts
+frontend/*.orig.*
+frontend/*.jks
+frontend/*.p8
+frontend/*.p12
+frontend/*.key
+frontend/*.mobileprovision
+frontend/.metro-health-check*
+frontend/npm-debug.*
+frontend/yarn-debug.*
+frontend/yarn-error.*
+frontend/.DS_Store
+frontend/*.pem
+frontend/.env*.local
+frontend/*.tsbuildinfo
+frontend/app-example
