app.json is updated with bottom navigation bar style

--- a/frontend/app.json
+++ b/frontend/app.json
@@ -36,6 +36,10 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "androidNavigationBar": {
+      "barStyle": "light-content",
+      "backgroundColor": "#000000"
     }
   }
 }
