--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,7 @@
     "@tanstack/react-query": "^5.66.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
-    "expo": "^52.0.30",
+    "expo": "~52.0.33",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.5",
     "expo-font": "~13.0.3",
@@ -34,14 +34,14 @@
     "expo-splash-screen": "~0.29.21",
     "expo-status-bar": "~2.0.1",
     "expo-symbols": "~0.2.1",
-    "expo-system-ui": "~4.0.7",
+    "expo-system-ui": "~4.0.8",
     "expo-web-browser": "~14.0.2",
     "google-libphonenumber": "^3.2.40",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.54.2",
-    "react-native": "0.76.6",
+    "react-native": "0.76.7",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "^4.12.0",
